# scientific_benchmarks

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  todo.md
CovMatrixEstimation/: CMakeLists.txt  CovMatEst_MKL_sp.txt  Makefile
CovMatrixEstimation/src/: main.c
CovMatrixEstimation/src/MKL/: autoBenchEstimation_MKL_sp.c  benchEstimation_MKL_sp.c  mklEstimation_Complex_sp.c  utils_sp.c
LegacyFFT/: Database_FFT.xlsx  Makefile
LegacyFFT/src/: MKL_flops_32_omp.c  cuFFT_32_flops.cu
MatrixMul/: Makefile  README.md
MatrixMul/results/: notes.txt
MatrixMul/src/: cgemm_OPENBLAS.c  zgemm_MKL.c  zgemm_OPENBLAS.c
MatrixMulLegacy/src/: cgemm_MKL.c  gene_bruit_rayleigh_scalaire.c  zgemm.cu
data/: data_generation.m  fWriteComplexMatrix.m  fWriteRealMatrix.m
data/CovMatEstimation/: .gitignore
include/: benchmarks.h  covmat_mkl.h  io.h  matrix.h  utils.h
src/covmat/: main.c
src/covmat/mkl/: covmat_mkl_benchmark_sp.c  covmat_mkl_complex_sp.c
src/mulmat/: Makefile  cgemm.cu
src/utils/: io.c  matrix.c  utils.c
tests/resources/: README.md  covmat_test_data.py  data_generation.m  generate_test_data.py
tests/src/: main.cpp  test_covmat.cpp  test_utils.cpp
tests/src/integration/: test_covmat_mkl.cpp
